add defined type scan